<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ContactUs">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/botttom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="250dp" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        android:id="@+id/start_guideline"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        android:id="@+id/end_guideline"/>

    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:text="@string/phone_number"
        android:textColor="@color/colorDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintEnd_toStartOf="@id/number"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/colorDark"
        android:textSize="15sp"
        android:fontFamily="@font/heebo_medium"
        app:layout_constraintStart_toStartOf="@id/text_phone_number"
        app:layout_constraintEnd_toEndOf="@id/text_phone_number"
        app:layout_constraintTop_toBottomOf="@id/text_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/botttom_guideline"
        android:text="@string/enter_email"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/heebo_regular"
        android:textColor="@color/colorDark"
        app:layout_constraintTop_toTopOf="@id/text_phone_number"
        app:layout_constraintStart_toEndOf="@id/text_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/text_phone_number"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_mail"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/text_email"
        app:layout_constraintStart_toEndOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toBottomOf="@id/text_email"/>
</androidx.constraintlayout.widget.ConstraintLayout>